# BitStream

./: .gitignore  README.md  makefile  pyproject.toml
FE/: test.html
app/: main.py
app/api/: services.py  ws.py
app/api/controllers/: jobs.py  videos.py
app/api/jobs/: schemas.py  store.py
app/api/routes/: job_routes.py  routes.py  video_routes.py
app/api/schemas/: schemas.py
app/core/: config.py  logging.py  redis.py
app/queue/: broker.py  task.py  transcription_task.py
app/workers/: audio.py  progress.py  tasks.py  transcription.py  utils.py
app/workers/hls/: hls.py
